src/cuda/peel_single.rs

/* automatically generated by rust-bindgen 0.64.0 */

extern "C" {
    pub fn xyzs_to_uvws(
        d_xyzs: *const XYZ,
        d_lmsts: *const f32,
        d_uvws: *mut UVW,
        pointing_centre: RADec,
        num_tiles: ::std::os::raw::c_int,
        num_baselines: ::std::os::raw::c_int,
        num_timesteps: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn rotate_average(
        d_high_res_vis: *const JonesF32,
        d_high_res_weights: *const f32,
        d_low_res_vis: *mut JonesF32,
        pointing_centre: RADec,
        num_timesteps: ::std::os::raw::c_int,
        num_tiles: ::std::os::raw::c_int,
        num_baselines: ::std::os::raw::c_int,
        num_freqs: ::std::os::raw::c_int,
        freq_average_factor: ::std::os::raw::c_int,
        d_lmsts: *const f32,
        d_xyzs: *const XYZ,
        d_uvws_from: *const UVW,
        d_uvws_to: *mut UVW,
        d_lambdas: *const f32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn iono_loop(
        d_vis_residual: *const JonesF32,
        d_vis_weights: *const f32,
        d_vis_model: *const JonesF32,
        d_vis_model_rotated: *mut JonesF32,
        d_iono_fits: *mut JonesF64,
        d_iono_consts: *mut IonoConsts,
        num_timesteps: ::std::os::raw::c_int,
        num_tiles: ::std::os::raw::c_int,
        num_baselines: ::std::os::raw::c_int,
        num_freqs: ::std::os::raw::c_int,
        num_iterations: ::std::os::raw::c_int,
        d_lmsts: *const f32,
        d_uvws: *const UVW,
        d_lambdas_m: *const f32,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn subtract_iono(
        d_vis_residual: *mut JonesF32,
        d_vis_model: *const JonesF32,
        d_iono_consts: *const IonoConsts,
        d_old_iono_consts: *const IonoConsts,
        d_uvws: *const UVW,
        d_lambdas_m: *const f32,
        num_timesteps: ::std::os::raw::c_int,
        num_baselines: ::std::os::raw::c_int,
        num_freqs: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn add_model(
        d_vis_residual: *mut JonesF32,
        d_vis_model: *const JonesF32,
        d_iono_consts: *const IonoConsts,
        d_lambdas_m: *const f32,
        d_uvws: *const UVW,
        num_timesteps: ::std::os::raw::c_int,
        num_baselines: ::std::os::raw::c_int,
        num_freqs: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
